# tcsim

./: .gitignore  pyproject.toml
Theory/: bla.ipynb  blob_contrast_decay.ipynb  bootstrap_data.npy  cat_squeezing_char_blob_contrast.ipynb  cat_squeezing_hastrup_char_blob_contrast.ipynb  cat_squeezing_wigner_negativity_plot.ipynb  char_and_wigner_of_squ.ipynb  characteristic_func_loss.ipynb  squeezing_state_overlap.ipynb
bbq presentation/: UV_intuition.ipynb  cat_decay.ipynb  cosine_potential.ipynb  uv_optimal_parameter.ipynb  wigner_char_cats.ipynb
data_analysis/: char_cohstate_rotation_angle.ipynb  sqcat_cat_same_overlap_conversion.ipynb
data_analysis/bootstraping/: bootstrap_data.npy  bt_1Dcut_charBlobAmp.ipynb  bt_1Dcut_charBlobAmp_decayConstant.ipynb  bt_2Dcut_charBlobAmp.ipynb.ipynb  bt_cat_timeEvolution_extracAngle.ipynb  function.py  parity_bootstrapping.ipynb  presi.ipynb
examples/: fringe_fit_example.ipynb  intro.ipynb
experiment/: CatAndBack.ipynb  CharCalibration.ipynb  berryPhase.ipynb  cohstate_cavity dephasing.ipynb  numberSplitting.ipynb
experiment/ECD/: ECD_additional_displacement.ipynb  Imperfect ECD .ipynb  playing_with_ECD.ipynb  test.ipynb
experiment/Hastrup_Protocol/: Hastrup_paper_recipe.ipynb  hastrup_ideal_visualize_dm.ipynb  hastrup_opt_para_ideal_state original.ipynb  hastrup_opt_para_ideal_state.ipynb  hastrup_optimal_parameters.ipynb  hastrup_prx_pry_distribution.ipynb  hastrup_squeezing_fitting.ipynb  radim_squeezing_followup.ipynb
experiment/UV_things/: UV_loss.ipynb  (+2 more)
tcsim/: gates.py  system.py  visualization.py
(+45 files in other folders)
