[tool.poetry]
name = "tcsim"
version = "0.1.0"
description = ""
authors = ["Jonathan <Jonathanschwinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qutip = "^4.7.1"
matplotlib = "^3.7.1"
lmfit = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
